Recompiled with optimizations

--- a/output.html
+++ b/output.html
@@ -37,7 +37,7 @@
             <h1>WebAssembly Demo</h1>
             <div id="credit">Made with <span id="fire">🔥</span> by RMidhunSuresh</div>
             <div>
-                <input type="number" id="inputBox" value="1000">
+                <input type="number" id="inputBox" value="1000000">
             </div>
         
             <button class="executeButton btn btn-light">Execute</button>
